# ftest

./: .ftest.toml  .ftest.yml  .gitignore  Cargo.toml  README.md  run_ftest.sh  run_ftest_on_ftest.sh  run_ftest_release.sh
.github/workflows/: package_on_release.yml
docs/: configuration.md
src/: args_parser.rs  main.rs  test_execution_environment.rs  test_executor.rs  test_suite.rs
src/ftest/: args_parser.rs  main.rs  test_executor.rs  test_suite.rs
tests/: .dummy_ftest.toml  .dummy_ftest.yml  .empty_ftest.toml  .empty_ftest.yml  .failing_ftest.toml  .failing_ftest.yml  .ftest.toml  .named_suite_ftest.toml  .named_suite_ftest.yml  .output_testing_ftest.toml  .output_testing_ftest.yml
tests_bins/simple_add/: .ftest.toml  main.rs
