[package]
name = "ftest"
version = "0.1.0"
description = "A simple and efficient functional testing tool."
edition = "2021"
publish = false

[[bin]]
name = "ftest"
path = "src/ftest/main.rs"

[[bin]]
name = "simple_add"
path = "tests_bins/simple_add/main.rs"

[dependencies]
serde = { version = "1.0.138", features = ["derive"] }
toml = "0.5.10"
clap = { version = "4.0.32", features = ["derive"] }
colored = "2.0.0"
