[package]
name = "ftest"
version = "0.1.0"
description = "A simple and efficient functional testing tool."
authors = ["Hugo Atomot"]
license = "GPL-3.0"
edition = "2021"
publish = false
[package.metadata.generate-rpm]
assets = [
    { source = "target/x86_64-unknown-linux-gnu/release/ftest", dest = "/usr/bin/ftest", mode = "755" }
]

[[bin]]
name = "ftest"
path = "src/ftest/main.rs"

[[bin]]
name = "simple_add"
path = "tests_bins/simple_add/main.rs"

[dependencies]
serde = { version = "1.0.138", features = ["derive"] }
toml = "0.5.10"
clap = { version = "4.0.32", features = ["derive"] }
colored = "2.0.0"
cargo-generate-rpm = "0.9.1"
